// mutual_exclusion.proto
syntax = "proto3";

package mutual_exclusion;

service MutualExclusion {
  rpc RequestEntry(Request) returns (Response);
  rpc ReleaseEntry(Release) returns (Response);
}

message Request {
  int64 timestamp = 1;
  string nodeId = 2;
}

message Release {
  int64 timestamp = 1;
  string nodeId = 2;
}

message Response {
  bool success = 1;
}
